--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate snake animation
 
 on:
   schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+    - cron: "0 */12 * * *"
 
   workflow_dispatch:
 
@@ -22,8 +22,10 @@ jobs:
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          outputs: dist/snake.svg?palette=github-dark
-
+          # color_snake: Màu xanh Cyan sáng để nổi bật khi di chuyển
+          # color_dots: Chuyển từ xám nhạt -> xanh dương rất đậm
+          outputs: |
+            dist/snake.svg?color_snake=#00d2ff&color_dots=#ebedf0,#a5d8ff,#4dabf7,#1971c2,#003566
 
       - name: push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
