--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate snake animation
 
 on:
   schedule: # execute every 12 hours
-    - cron: "0 */12 * * *"
+    - cron: "* */12 * * *"
 
   workflow_dispatch:
 
@@ -22,11 +22,13 @@ jobs:
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-        # color_snake: #002147 là mã màu Oxford Blue chuẩn
+            # color_snake: #002147 là mã màu Oxford Blue chuẩn
           # color_dots: Giữ nguyên dải màu xanh dương từ nhạt đến đậm
           outputs: |
-            dist/snake.svg?color_snake=#002147&color_dots=#ebedf0,#a5d8ff,#4dabf7,#1971c2,#003566
-            
+            dist/snake.svg?color_snake=#002147
+          # outputs: dist/snake.svg?palette=github-dark
+
+
       - name: push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
