--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -26,7 +26,7 @@ jobs:
           # color_dots: Giữ nguyên dải màu xanh dương từ nhạt đến đậm
           # outputs: |
           #   dist/snake.svg?color_snake=#002147
-          outputs: dist/snake.svg?palette=github-dark&color_snake=#002147
+          outputs: dist/snake.svg?palette=github-dark&color_snake=#0000ed
 
 
       - name: push snake.svg to the output branch
